# echo-board

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  ruff.toml  setup.md  test_invoke_output.py  validate.py
.Jules/: palette.md
.claude/: settings.local.json
.jules/: bolt.md
.specify/memory/: constitution.md
docs/: BACKLOG.md
interface/: app_ui.py
specs/001-personal-board-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-personal-board-app/checklists/: requirements.md
specs/001-personal-board-app/contracts/: api.yaml
src/: __init__.py  app.py  main_test.py  main_test2.py  main_test3.py  main_test4.py
src/agents/: __init__.py  archivist.py  board_members.py  cfo.py  coach.py  graph.py  nodes.py  orchestrator.py  router.py  strategist.py  synthesizer.py
src/agents/prompts/: archivist.txt  archivist_prompts.py  cfo_prompts.py  coach.txt  coach_prompts.py  strategist.txt  strategist_prompts.py  synthesizer.py
src/core/: __init__.py  api_key.py  chinese_check.py  config.py  logging.py  performance.py  state.py  validation.py
src/core/models/: __init__.py  context.py  conversation.py  domain_models.py  note.py
src/infrastructure/: llm_factory.py  mem0_service.py  obsidian_loader.py  vector_store.py
src/mcp/: firefly_iii.py
src/utils/: ingestion_helper.py
tests/: __init__.py  benchmark_ingestion.py  test_batching.py  test_obsidian_loader.py
tests/performance/: benchmark_sync.py
tests/unit/: test_concurrent_ingestion.py  test_ingestion.py  test_ingestion_helper.py  test_obsidian_loader.py
