[project]
name = "echo-board"
version = "0.1.0"
description = "Personal Board of Directors - AI-powered life advice from your Obsidian notes"
authors = [
    {name = "Echo-Board Team", email = "team@echo-board.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "langchain-chroma>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-anthropic>=1.2.0",
    "python-dotenv>=1.2.1",
    "langchain>=1.1.3",
    "streamlit>=1.52.1",
    "langgraph>=1.0.4",
    "chromadb>=1.3.6",
    "pydantic>=2.12.5",
    "python-frontmatter>=1.1.0",
    "typing-extensions>=4.15.0",
    "sqlite-utils>=3.39",
    "langchain-openai>=1.1.1",
    "langchain-text-splitters>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "uv>=0.9.17",
]
